Fix profile edit text jump

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -878,7 +878,7 @@ label.MuiFormLabel-root {
   }
 
   .profile--wrapper > * {
-    margin-bottom: 36px;
+    margin-bottom: 33px;
   }
 
   .profile--wrapper input[type="text"].new-item {
